--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         <p class="read-the-docs">Click on the Vite logo to learn more!!!</p>
       </div>
     </div>
-    <script type="module" src="./main.js"></script>
+    <script type="module" src="./public/main.js"></script>
   </body>
 </html>
