--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./public/vite.svg" />
     <link rel="stylesheet" href="./public/style.css" type="text/css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App!</title>
+    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
